# Motor-Vehicle-Collisions

./: .gitignore  01_DataProcessing.ipynb  02_EDA.ipynb  03_Modelling.ipynb  README.md  crash_marker_cluster_map.html  pyproject.toml
