[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["Henil Gajjar <henilgajjar08@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.6.1"
ipykernel = "^6.29.5"
pandas = "^2.2.3"
matplotlib = "^3.10.1"
numpy = "^2.2.4"
seaborn = "^0.13.2"
missingno = "^0.5.2"
folium = "^0.19.5"
plotly = "^6.0.1"
nbformat = "^5.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
